latest changes monday

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
     <p>I like cats. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quam omnis quidem recusandae nesciunt
         necessitatibus quisquam molestias natus pariatur consequuntur corrupti, odit, voluptas facere, rerum maiores
         cumque. Aspernatur, sint reiciendis.
-        <img src="/Users/skynewell/sky-hat.jpg" width="200px" height="100px" alt="girl in hat">
+        <img src="/Users/skynewell/sky-hat.jpg" width="200px" height="150px" alt="girl in hat">
     </p>
     <h2>Education</h2>
     <ol>
@@ -24,9 +24,9 @@
     <h2>Skills</h2>
     <p> I have owned my owned and operated my salon since 2002. Lorem ipsum dolor sit amet consectetur, adipisicing
         elit. Ad quaerat sunt dolorem distinctio atque, repellat, eos odit neque velit laudantium cupiditate soluta
-        quisquam rem a. Nostrum deserunt natus necessitatibus maxime.
-    <img src="/Users/skynewell/code/images/homer-gif.gif" width="200px" height="100px" 
-    />
+        quisquam rem a. Nostrum deserunt natus necessitatibus maxime.</p>
+
+    <img src="images/homer1.gif" width="200px" height="150px">
 
 
 
