--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,7 +13,7 @@
     <p>I like cats. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam quam omnis quidem recusandae nesciunt
         necessitatibus quisquam molestias natus pariatur consequuntur corrupti, odit, voluptas facere, rerum maiores
         cumque. Aspernatur, sint reiciendis.
-        <img src="/Users/skynewell/sky-hat.jpg" width="200px" height="150px" alt="girl in hat">
+        <img src="sky-hat2.jpg" width="200px" height="150px" alt="girl in hat">
     </p>
     <h2>Education</h2>
     <ol>
